[package]
name = "admin-server"
version = "0.3.672-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }

governance = { path = "../../core/governance" }
core-access = { path = "../../core/access" }
core-custody = { path = "../../core/custody" }

audit = { path = "../../lib/audit" }
tracing-utils = { path = "../../lib/tracing-utils", features = ["http"] }
jwks-utils = { path = "../../lib/jwks-utils" }

es-entity = { workspace = true, features = ["graphql"] }
cala-ledger = { workspace = true, features = ["graphql"] }

uuid = { workspace = true }
base64 = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
