[package]
name = "lana-app"
version = "0.3.666-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["rust_decimal", "sim-time", "schemars"]

[features]
sim-time = [
  "dep:sim-time",
  "es-entity/sim-time",
  "core-credit/sim-time",
  "dashboard/sim-time",
  "user-onboarding/sim-time",
  "customer-sync/sim-time",
  "core-deposit/sim-time",
  "job/sim-time",
]

fail-on-warnings = []

[dependencies]
rbac-types = { path = "../rbac-types" }
lana-events = { path = "../events" }
lana-ids = { path = "../ids" }

dashboard = { path = "../dashboard" }
user-onboarding = { path = "../user-onboarding" }
customer-sync = { path = "../customer-sync" }
notification = { path = "../notification" }

governance = { path = "../../core/governance", features = ["graphql"] }
core-money = { path = "../../core/money" }
core-access = { path = "../../core/access", features = ["graphql"] }
core-custody = { path = "../../core/custody", features = ["graphql"] }
core-credit = { path = "../../core/credit", features = ["graphql"] }
core-customer = { path = "../../core/customer", features = ["graphql"] }
core-price = { path = "../../core/price" }
core-deposit = { path = "../../core/deposit", features = ["graphql"] }
core-accounting = { path = "../../core/accounting", features = ["graphql"] }
document-storage = { path = "../../core/document-storage", features = ["graphql"] }
job = { path = "../../lib/job" }
outbox = { path = "../../lib/outbox" }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
cloud-storage = { path = "../../lib/cloud-storage" }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
gcp_auth = { workspace = true }
gcp-bigquery-client = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
