[package]
name = "lana-cli"
version = "0.3.46-dev"
edition = "2021"

[features]
sim-time = ["dep:sim-time"]
sim-bootstrap = ["dep:sim-bootstrap"]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }
admin-server = { path = "../admin-server" }
customer-server = { path = "../customer-server" }

sim-bootstrap = { path = "../sim-bootstrap", optional = true }

tracing-utils = { path = "../../lib/tracing-utils", features = ["http"] }

sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
