[package]
name = "lana-cli"
version = "0.3.672-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
sim-time = [
  "dep:sim-time",
  "lana-app/sim-time"
]
sim-bootstrap = ["dep:sim-bootstrap"]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }
admin-server = { path = "../admin-server" }
customer-server = { path = "../customer-server" }

sim-bootstrap = { path = "../sim-bootstrap", optional = true }

tracing-utils = { path = "../../lib/tracing-utils", features = ["http"] }

sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
chacha20poly1305 = { workspace = true }
