[package]
name = "customer-server"
version = "0.3.146-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }

core-customer = { path = "../../core/customer", features = ["graphql"] }

tracing-utils = { path = "../../lib/tracing-utils" }
jwks-utils = { path = "../../lib/jwks-utils" }

es-entity = { workspace = true, features = ["graphql"] }

serde = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
