[package]
name = "customer-sync"
version = "0.3.672-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["es-entity"]

[features]
sim-time = [
  "dep:sim-time",
  "es-entity/sim-time"
]

fail-on-warnings = []

[dependencies]

core-customer = { path = "../../core/customer" }
core-deposit = { path = "../../core/deposit" }
governance = { path = "../../core/governance" }

outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
kratos-admin = { path = "../../lib/kratos-admin" }

es-entity = { workspace = true, features = ["graphql"] }
sim-time = { workspace = true, optional = true }

tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
