[package]
name = "dashboard"
version = "0.3.558-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["es-entity"]

[features]
sim-time =  [ "dep:sim-time", "es-entity/sim-time" ]

fail-on-warnings = []

[dependencies]
lana-events = { path = "../events" }
core-money = { path = "../../core/money" }

authz = { path = "../../lib/authz" }
audit = { path = "../../lib/audit" }
outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }

es-entity = { workspace = true, features = ["graphql"] }
sim-time = { workspace = true, optional = true }

uuid = { workspace = true }
strum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
