[package]
name = "lana-events"
version = "0.3.649-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
governance = { path = "../../core/governance" }
core-access = { path = "../../core/access" }
core-customer = { path = "../../core/customer" }
core-credit = { path = "../../core/credit" }
core-deposit = { path = "../../core/deposit" }
outbox = { path = "../../lib/outbox" }

serde = { workspace = true }
