[package]
name = "lana-ids"
version = "0.3.161-dev"
edition = "2021"

[features]

default = ["graphql"]
graphql = []

[dependencies]
governance = { path = "../../core/governance", features = ["graphql"] }
deposit = { path = "../../core/deposit", features = ["graphql"] }

job = { path = "../../lib/job" }

es-entity = { workspace = true, features = ["graphql"] }
sqlx = { workspace = true }
serde = { workspace = true }
cala-ledger = { workspace = true }
