[package]
name = "lana-ids"
version = "0.3.558-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["serde", "sqlx"]

[features]

default = ["graphql"]
graphql = []

[dependencies]
governance = { path = "../../core/governance", features = ["graphql"] }

job = { path = "../../lib/job" }

es-entity = { workspace = true, features = ["graphql"] }
cala-ledger = { workspace = true }

# Required by es_entity::entity_id macro
sqlx = { workspace = true }
serde = { workspace = true }
