[package]
name = "rbac-types"
version = "0.3.649-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["sqlx"]

[features]

fail-on-warnings = []

[dependencies]
dashboard = { path = "../dashboard" }

governance = { path = "../../core/governance" }
core-access = { path = "../../core/access" }
core-customer = { path = "../../core/customer" }
core-credit = { path = "../../core/credit" }
core-custody = { path = "../../core/custody" }
core-deposit = { path = "../../core/deposit" }
core-accounting = { path = "../../core/accounting" }
lana-ids = { path = "../ids/" }

audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }

async-graphql = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
